crates/tui/src/ui/snapshots/mxr_tui__ui__whois_modal__tests__whois_modal_unknown.snap
---
source: crates/tui/src/ui/whois_modal.rs
assertion_line: 267
expression: rendered
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"            ╭ Whois: ghost-term ───────────────────────────────────╮            "
"            │  ghost-term (unknown)                                │            "
"            │                                                      │            "
"            │  No local evidence found.                            │            "
"            │                                                      │            "
"            │  [Esc] close                                         │            "
"            │                                                      │            "
"            │                                                      │            "
"            │                                                      │            "
"            │                                                      │            "
"            │                                                      │            "
"            │                                                      │            "
"            │                                                      │            "
"            ╰──────────────────────────────────────────────────────╯            "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
